# brownbag-workshop-aidev

./: .gitignore  Dockerfile  README.md  railway.json
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.html  app.module.ts
frontend/src/app/components/todo-form/: todo-form.component.html  todo-form.component.ts
frontend/src/app/components/todo-item/: todo-item.component.html  todo-item.component.ts
frontend/src/app/components/todo-list/: todo-list.component.html  todo-list.component.ts
frontend/src/app/services/: todo.service.ts
