[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-cors = "0.6.4"
actix-files = "0.6"